Version 1.2.7+svn:
 * multiplayer:
   * the server sends a periodical 'ping' to all players to detect ghosts

Version 1.2.7:
 * language and i18n:
   * updated translations: Czech, Danish, Dutch, French, German, Italian,
     Japanese, Polish, Portuguese (Brazil), Serbian, Slovak, Spanish, Swedish
   * new translation: Serbian (Latin version)
   * updated DejaVu font to 2.20
   * added sazanami-gothic font (needed for the Japanese translation)
 * multiplayer maps:
   * revised maps: Blitz, Cynsaun Battlefield, Hamlets, Meteor Lake
   * fixed a crash if the client recieves invalid utf-8
   * fixed a server side bug with could cause invalid utf-8 being send to a
     client.
 * misc:
   * really fix the trait OOS so it works correctly on Windows as well
   * map label length is correctly determined for multibyte 
     characters (bug #6855)

Version 1.2.6:
 * WML engine
   * fix [variables] not working properly in scenarios (bug #9342)
 * language and i18n:
   * updated translations: British English, Danish, Finnish, Spanish, Swedish
   * updated DejaVuSans font to version 2.18
 * user interface:
   * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
   * Add an additional line below the minimap in the "Multiplayer->Create game"
     screen that displays the size of the selected map. (patch #776 by uso)
   * Show the (possibly bogus) GPV and fog settings of games with "Use map
     settings" on in a darker font. (patch #771 by uso)
 * misc:
   * added some extra headers for the upcomming gcc 4.3 (debian bug #417764)
   * added a .desktop entry for the editor so that it is shown in the kde/gnome
     menu
   * the unit name generation could with different locales call get_random() a
     different number of times. This lead to different names and traits.
     Changed to call random a fixed number of times which fixes the traits.

Version 1.2.5:
 * campaigns:
   * Under the Burning Suns
     * new ranged attack frames for the Naga Hunter