@@ -1,6 +1,7 @@
 Version 1.2.7+svn:
  * multiplayer:
    * the server sends a periodical 'ping' to all players to detect ghosts
+   * implemented reloading of the server config on SIGHUP
 
 Version 1.2.7:
  * language and i18n:
